--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,19 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 def credentialsPropertiesFile = rootProject.file("credentials.properties")
 def credentialsProperties = new Properties()
 credentialsProperties.load(new FileInputStream(credentialsPropertiesFile))
 
 ext {
-    nav_version = "2.3.0-beta01"
-    retrofit_version = "2.9.0"
+    version_navigation = "2.3.0-beta01"
+    version_retrofit = "2.9.0"
+    version_moshi = "1.9.2"
+    version_kotlin_coroutines = "1.3.7"
+    version_retrofit_coroutines_adapter = "0.9.2"
+    version_glide = "4.11.0"
     apiToken = credentialsProperties.getProperty('apiKey')
 }
 
@@ -31,6 +36,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -39,6 +48,10 @@ android {
         debug {
             buildConfigField("String", "NYT_API_KEY", "\"${apiToken}\"")
         }
+    }
+
+    androidExtensions {
+        experimental = true
     }
 
     dataBinding {
@@ -53,17 +66,32 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Kotlin Navigation component
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
 
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
-    // Temporarily using Scalars converter for strings
-    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
+    // Moshi
+    implementation "com.squareup.moshi:moshi:$version_moshi"
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$version_glide"
+
+    // RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
 }
